New simplified version of homepage and cases. More stuff added.

--- a/_pages/home/index.html
+++ b/_pages/home/index.html
@@ -1,7 +1,6 @@
 ---
 layout: home
-title: 
-link: Inicio
+title: David Gallardo | Product Designer
 permalink: //
 nav-deepness: 1
 navigation_order: 1
