- Better structure with detached dev code from production - Gulpfile now works with the new structure

--- a/dev/index.html
+++ b/dev/index.html
@@ -20,7 +20,7 @@
     <![endif]-->
     <main class="out-container">
       <nav class="navigation animated fadeInTab">
-        <div class="nav-logo"><a href="/"><img src="img/logo.svg" alt="David Gallardo's Logo"></a></div>
+        <div class="nav-logo"><a href="/"><img src="img/logo.svg" alt="David Gallardo's Logo" data-no-retina></a></div>
         <div class="nav-contact"><a href="javscript:void(0);" id="contact-link">Contact me</a></div>
       </nav>
       <div class="article">
@@ -40,11 +40,8 @@
         </div>
       </div>
     </main>
-    <script src="js/vendor/modernizr-3.6.0.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-    <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.3.1.min.js"><\/script>')</script>
-    <script src="js/plugins.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/main.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
     <script>
       WebFont.load({
