--- a/index.html
+++ b/index.html
@@ -1,55 +1,204 @@
 <!doctype html>
-<html class="no-js" lang="">
-  <head>
-    <meta charset="utf-8">
-    <title>David Gallardo | Product Designer</title>
-    <meta name="description" content="Hello I'm David Gallardo and this is my personal website.">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="manifest" href="site.webmanifest">
-    <link rel="apple-touch-icon" href="icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <meta name="theme-color" content="#ffffff">
+<html class="no-js" lang="en">
 
-    <link rel="stylesheet" href="css/main.css">
-  </head>
-  <body>
-    <!--[if lte IE 9]>
-    <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
-    <![endif]-->
-    <main class="out-container">
-      <nav class="navigation animated fadeInTab">
-        <div class="nav-logo"><a href="/"><img src="img/logo.svg" alt="David Gallardo's Logo" data-no-retina></a></div>
-        <div class="nav-contact"><a href="javscript:void(0);" id="contact-link">Contact me</a></div>
-      </nav>
-      <div class="article">
-        <div class="eyebrow animated fadeInUp delay-3">David Gallardo</div>
-        <h1 class="title animated fadeInUp delay-5">Product Designerd.</h1>
-        <div class="main-copy animated fadeInUp delay-7">
-          <p>Hello 👋  I’m David! I live in the sunny Barcelona and I’ve been designing digital experiences over the past 10 years for companies like <span class="img-reveal">those<span class="img-floating"><img src="img/clients.gif" alt="Some clients I've worked for."></span></span><span class="small-display">Aba English, Atrapalo, Simyo, Softonic, Infojobs or SEAT</span>.</p>
-          <p>I’m currently working at <a href="https://travelperk.com/" target="_blank" rel="noopener noreferrer">Travelperk</a>, an all-in-one platform for business travel.</p>
-          <p>At the same time I’m teaching Design at <a href="https://www.neoland.es/" target="_blank" rel="noopener noreferrer">Neoland</a> and preparing myself to do an Ironman  🏊🏼‍♂️🚴‍♂️🏃🏻‍♂️.</p>
-          <p>Before, I worked at Metropolis:lab, an innovation hub that’s trying to improve citizens life through mobility <span class="img-reveal">products<span class="img-floating"><img src="img/products.gif"></span></span><span class="small-display">products</span> and services. Previous to that, I was a Lead Designer at Lola where we redesigned the whole digital ecosystem of a global automotive company. Even before I used to work at Mobivery doing lots of mobile apps and a SaaS for mobile marketing.</p>
-          <p>P.S. In 2017 I had the opportunity to travel around the world 🌏 with my partner while doing some freelance work. We wrote a blog talking about our adventure. You can check it out <a href="https://wefoundarobot.com/" target="_blank" rel="noopener noreferrer">here</a>.</p>
-        </div>
-        <div class="secondary-copy" id="contact-section">
-          <p>If you’re still interested in knowing more about me, you can take a look at any of my social networks: <a href="https://linkedin.com/in/gallardodavid" target="_blank" rel="noopener noreferrer">linkedin</a>, <a href="https://dribbble.com/davidgallardo" target="_blank" rel="noopener noreferrer">dribbble</a>, <a href="https://instagram.com/david_gallardo" target="_blank" rel="noopener noreferrer">instagram</a>, <a href="https://twitter.com/davrocks" target="_blank" rel="noopener noreferrer">twitter</a>.
-          </p>
-          <p class="contact-address">Or write me at <a href="mailto:hello@dgallardo.com">hel<span>null</span>lo<span>nulo</span>@dga<span>null</span>llardo<span>nulo</span>.com</a></p>
+<head>
+  <meta charset="utf-8">
+  <title>David Gallardo | Product Designer</title>
+  <meta name="description" content="Hey, I'm David Gallardo, a Product designer based in sunny Barcelona. Welcome to my personal website!">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <meta property="og:title" content="">
+  <meta property="og:type" content="">
+  <meta property="og:url" content="">
+  <meta property="og:image" content="">
+
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+
+  <link rel="stylesheet" href="css/main.css">
+
+  <meta name="theme-color" content="#fafafa">
+</head>
+
+<body>
+  <!-- The cursor elements -->
+  <div class="cursor cursor--small"></div>
+  <canvas class="cursor cursor--canvas" resize></canvas>
+
+  <header class="header">
+    <div class="inner-grid">
+      <div class="container">
+        <div class="row">
+          <div class="col-4 offset-4 inner-column"></div>
         </div>
       </div>
-    </main>
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-    <script src="js/main.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
-    <script>
-      WebFont.load({
-      google: {
-        families: [
-        'Ubuntu:300,400,500,700'
-        ]}
-      });
-    </script>
-  </body>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="logo"><img src="img/logo.png" alt="lighting logo" data-aos="fade-down"></div>
+      </div>
+      <div class="row">
+        <div class="col-12 offset-md-1 col-md-8 offset-md-2 col-lg-6 offset-lg-3 hero-wrap">
+          <div class="title-wrap" data-aos="fade-up" data-aos-delay="200">
+            <h1 class="title">david gallardo</br> designerd</h1>
+          </div>
+          <img src="img/hero-img.png" alt="David Gallardo in a forest" data-aos="fade-up" data-aos-delay="500">
+        </div>
+      </div>
+    </div>
+  </header>
+
+  <section class="presentation">
+    <div class="inner-grid">
+      <div class="container">
+        <div class="row">
+          <div class="col-4 offset-4 inner-column"></div>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-12 col-md-10 offset-md-1 col-lg-10 offset-lg-0 col-xl-8 prez-block">
+          <h2 data-aos="fade-up">I design digital products</h2>
+          <p data-aos="fade-up" data-aos-delay="200">I’m currently a Sr Product Designer at <a href="https://travelperk.com" class="link" target="_blank" rel="noopener noreferrer">Travelperk</a>, an all-in-one platform for business travel, but I’ve been designing digital experiences over the past
+            11 years.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+  <section class="projects">
+    <div class="inner-grid">
+      <div class="container">
+        <div class="row">
+          <div class="col-4 offset-4 inner-column"></div>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-12 order-2 order-md-1 col-md-6 col-lg-6 col-xl-5 zazu-wrap" data-aos="fade-up" data-aos-delay="200">
+          <div class="zazu-caption">
+            <p>
+              I’m also helping the <span class="zazu-link">zazu.me</span> team build the next generation of property management software.
+            </p>
+          </div>
+          <img src="img/zazume.png" alt="zazu.me screenshot">
+
+        </div>
+        <div class="col-12 order-1 order-md-2 offset-0 col-md-6 offset-xl-2 col-lg-6 col-xl-5 tk-wrap" data-aos="fade-up">
+          <img src="img/travelperk.png" alt="TravelPerk screenshot">
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="hobbies">
+    <div class="inner-grid">
+      <div class="container">
+        <div class="row">
+          <div class="col-4 offset-4 inner-column"></div>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-4 hobbies-block">
+          <h2 data-aos="fade-up">Interfaces are my thing, but not the only one</h2>
+          <p data-aos="fade-up" data-aos-delay="200">I’ve been lucky enough to <a href="https://wefoundarobot.com/" class="link" target="_blank" rel="noopener noreferrer">travel the world</a> for a year, train and sucessfully finish a full <a href="https://www.instagram.com/p/B0GSjx4oOpo/" class="link"
+              target="_blank" rel="noopener noreferrer">Ironman</a> and recently, I like to go out with my camera and try to get some interesting <a href="https://www.instagram.com/softlightz_/" class="link" target="_blank" rel="noopener noreferrer">lights and
+            people</a> around the city.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="photography">
+    <div class="inner-grid">
+      <div class="container">
+        <div class="row">
+          <div class="col-4 offset-4 inner-column"></div>
+        </div>
+      </div>
+    </div>
+    <div class="photo-wrap">
+      <div class="photo-list">
+        <div class="photo" data-aos="fade-up"><img src="img/photos/1-street.png" alt="Man in a tunnel - photo by David Gallardo"></div>
+        <div class="photo" data-aos="fade-up" data-aos-delay="200"><img src="img/photos/2-street.png" alt="woman walking in an alley - photo by David Gallardo"></div>
+        <div class="photo" data-aos="fade-up" data-aos-delay="400"><img src="img/photos/3-street.png" alt="woman with a mask going down the stairs - photo by David Gallardo"></div>
+        <div class="photo" data-aos="fade-up" data-aos-delay="600"><img src="img/photos/4-street.png" alt="two man laughing in a bar terrace - photo by David Gallardo"></div>
+        <div class="photo" data-aos="fade-up" data-aos-delay="800"><img src="img/photos/5-street.png" alt="man at the end of the street - photo by David Gallardo"></div>
+        <div class="photo" data-aos="fade-up" data-aos-delay="1000"><img src="img/photos/6-street.png" alt="man walking in Raval - photo by David Gallardo"></div>
+      </div>
+    </div>
+  </section>
+
+  <section class="keepintouh">
+    <div class="inner-grid">
+      <div class="container">
+        <div class="row">
+          <div class="col-4 offset-4 inner-column"></div>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-12 col-md-10 offset-md-1 col-lg-10 offset-lg-0 col-xl-8 prez-block">
+          <h2 data-aos="fade-up">Let’s keep in touch</h2>
+          <p data-aos="fade-up" data-aos-delay="200">If you made it that far and still feel like you want to know more about me or maybe start a project together, please feel free to drop me an <a href="mailto:hello@dgallardo.com" class="link">email</a> or connect through any of the social media
+            accounts I have.
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <footer class="footer">
+    <div class="inner-grid">
+      <div class="container">
+        <div class="row">
+          <div class="col-4 offset-4 inner-column"></div>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="sm-links-wrap">
+          <ul class="sm-list">
+            <li class="sm-link link" data-aos="fade-up"><a href="https://www.linkedin.com/in/gallardodavid/" target="_blank" rel="noopener noreferrer">Linkedin</a></li>
+            <li class="sm-link link" data-aos="fade-up" data-aos-delay="200"><a href="https://www.instagram.com/david_gallardo/" target="_blank" rel="noopener noreferrer">Instagram</a></li>
+            <li class="sm-link link" data-aos="fade-up" data-aos-delay="400"><a href="https://dribbble.com/davidgallardo" target="_blank" rel="noopener noreferrer">Dribbble</a></li>
+            <li class="sm-link link" data-aos="fade-up" data-aos-delay="600"><a href="https://twitter.com/davrocks" target="_blank" rel="noopener noreferrer">Twitter</a></li>
+          </ul>
+          <div class="top-arrow-wrap">
+            <a class="link" id="scrollTop"><img src="img/top-arrow.svg" alt="top arrow"></a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+  </footer>
+
+
+  <script src="js/vendor/modernizr-3.11.2.min.js"></script>
+  <script src="js/aos.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/paper.js/0.12.0/paper-core.min.js"></script>
+  <script src="js/main.js"></script>
+  <script>
+    var scrollToTopBtn = document.getElementById("scrollTop")
+    var rootElement = document.documentElement
+
+    function scrollToTop() {
+      rootElement.scrollTo({
+        top: 0,
+        behavior: "smooth"
+      })
+    }
+    scrollToTopBtn.addEventListener("click", scrollToTop);
+  </script>
+
+
+
+</body>
+
 </html>
