--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </div>
     <div class="container">
       <div class="row">
-        <div class="logo"><img src="img/logo.png" alt="lighting logo" data-aos="fade-down"></div>
+        <div class="logo"><img src="img/logo-flat.png" alt="lighting logo" data-aos="fade-down"></div>
       </div>
       <div class="row">
         <div class="col-12 offset-md-1 col-md-8 offset-md-2 col-lg-6 offset-lg-3 hero-wrap">
