all images are now Webp + some opengraph tweaks

--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
   <meta name="description" content="Hey, I'm David Gallardo, a Product designer based in sunny Barcelona. Welcome to my personal website!">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <meta property="og:title" content="">
-  <meta property="og:type" content="">
-  <meta property="og:url" content="">
-  <meta property="og:image" content="">
+  <meta property="og:title" content="David Gallardo | Product Designer">
+  <meta property="og:description" content="Hey, I'm David Gallardo, a Product designer based in sunny Barcelona. Welcome to my personal website!" />
+  <meta property="og:url" content="https://dgallardo.com">
+  <meta property="og:image" content="img/davidgallardo-og.png">
 
+  <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 
@@ -35,14 +36,14 @@
     </div>
     <div class="container">
       <div class="row">
-        <div class="logo"><img src="img/logo-flat.png" alt="lighting logo" data-aos="fade-down"></div>
+        <div class="logo"><img src="img/logo-flat.webp" alt="lighting logo" data-aos="fade-down"></div>
       </div>
       <div class="row">
         <div class="col-12 offset-md-1 col-md-8 offset-md-2 col-lg-6 offset-lg-3 hero-wrap">
           <div class="title-wrap" data-aos="fade-up" data-aos-delay="200">
             <h1 class="title">david gallardo</br> designerd</h1>
           </div>
-          <img src="img/hero-img.png" alt="David Gallardo in a forest" data-aos="fade-up" data-aos-delay="500">
+          <img src="img/hero-img.webp" alt="David Gallardo in a forest" data-aos="fade-up" data-aos-delay="500">
         </div>
       </div>
     </div>
@@ -60,7 +61,7 @@
       <div class="row">
         <div class="col-12 col-md-10 offset-md-1 col-lg-10 offset-lg-0 col-xl-8 prez-block">
           <h2 data-aos="fade-up">I design digital products</h2>
-          <p data-aos="fade-up" data-aos-delay="200">I’m currently a Sr Product Designer at <a href="https://travelperk.com" class="link" target="_blank" rel="noopener noreferrer">Travelperk</a>, an all-in-one platform for business travel, but I’ve been designing digital experiences over the past
+          <p data-aos="fade-up">I’m currently a Sr Product Designer at <a href="https://travelperk.com" class="link" target="_blank" rel="noopener noreferrer">Travelperk</a>, an all-in-one platform for business travel, but I’ve been designing digital experiences over the past
             11 years.</p>
         </div>
       </div>
@@ -84,11 +85,11 @@
               I’m also helping the <span class="zazu-link">zazu.me</span> team build the next generation of property management software.
             </p>
           </div>
-          <img src="img/zazume.png" alt="zazu.me screenshot">
+          <img src="img/zazume.webp" alt="zazu.me screenshot">
 
         </div>
         <div class="col-12 order-1 order-md-2 offset-0 col-md-6 offset-xl-2 col-lg-6 col-xl-5 tk-wrap" data-aos="fade-up">
-          <img src="img/travelperk.png" alt="TravelPerk screenshot">
+          <img src="img/travelperk.webp" alt="TravelPerk screenshot">
         </div>
       </div>
     </div>
@@ -105,7 +106,7 @@
       <div class="row">
         <div class="col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-4 hobbies-block">
           <h2 data-aos="fade-up">Interfaces are my thing, but not the only one</h2>
-          <p data-aos="fade-up" data-aos-delay="200">I’ve been lucky enough to <a href="https://wefoundarobot.com/" class="link" target="_blank" rel="noopener noreferrer">travel the world</a> for a year, train and sucessfully finish a full <a href="https://www.instagram.com/p/B0GSjx4oOpo/" class="link"
+          <p data-aos="fade-up">I’ve been lucky enough to <a href="https://wefoundarobot.com/" class="link" target="_blank" rel="noopener noreferrer">travel the world</a> for a year, train and sucessfully finish a full <a href="https://www.instagram.com/p/B0GSjx4oOpo/" class="link"
               target="_blank" rel="noopener noreferrer">Ironman</a> and recently, I like to go out with my camera and try to get some interesting <a href="https://www.instagram.com/softlightz_/" class="link" target="_blank" rel="noopener noreferrer">lights and
             people</a> around the city.</p>
         </div>
@@ -122,12 +123,12 @@
     </div>
     <div class="photo-wrap">
       <div class="photo-list">
-        <div class="photo" data-aos="fade-up"><img src="img/photos/1-street.png" alt="Man in a tunnel - photo by David Gallardo"></div>
-        <div class="photo" data-aos="fade-up" data-aos-delay="200"><img src="img/photos/2-street.png" alt="woman walking in an alley - photo by David Gallardo"></div>
-        <div class="photo" data-aos="fade-up" data-aos-delay="400"><img src="img/photos/3-street.png" alt="woman with a mask going down the stairs - photo by David Gallardo"></div>
-        <div class="photo" data-aos="fade-up" data-aos-delay="600"><img src="img/photos/4-street.png" alt="two man laughing in a bar terrace - photo by David Gallardo"></div>
-        <div class="photo" data-aos="fade-up" data-aos-delay="800"><img src="img/photos/5-street.png" alt="man at the end of the street - photo by David Gallardo"></div>
-        <div class="photo" data-aos="fade-up" data-aos-delay="1000"><img src="img/photos/6-street.png" alt="man walking in Raval - photo by David Gallardo"></div>
+        <div class="photo" data-aos="fade-up"><img src="img/photos/1-street.webp" alt="Man in a tunnel - photo by David Gallardo"></div>
+        <div class="photo" data-aos="fade-up" data-aos-delay="200"><img src="img/photos/2-street.webp" alt="woman walking in an alley - photo by David Gallardo"></div>
+        <div class="photo" data-aos="fade-up" data-aos-delay="400"><img src="img/photos/3-street.webp" alt="woman with a mask going down the stairs - photo by David Gallardo"></div>
+        <div class="photo" data-aos="fade-up" data-aos-delay="600"><img src="img/photos/4-street.webp" alt="two man laughing in a bar terrace - photo by David Gallardo"></div>
+        <div class="photo" data-aos="fade-up" data-aos-delay="800"><img src="img/photos/5-street.webp" alt="man at the end of the street - photo by David Gallardo"></div>
+        <div class="photo" data-aos="fade-up" data-aos-delay="1000"><img src="img/photos/6-street.webp" alt="man walking in Raval - photo by David Gallardo"></div>
       </div>
     </div>
   </section>
@@ -144,7 +145,7 @@
       <div class="row">
         <div class="col-12 col-md-10 offset-md-1 col-lg-10 offset-lg-0 col-xl-8 prez-block">
           <h2 data-aos="fade-up">Let’s keep in touch</h2>
-          <p data-aos="fade-up" data-aos-delay="200">If you made it that far and still feel like you want to know more about me or maybe start a project together, please feel free to drop me an <a href="mailto:hello@dgallardo.com" class="link">email</a> or connect through any of the social media
+          <p data-aos="fade-up">If you made it that far and still feel like you want to know more about me or maybe start a project together, please feel free to drop me an <a href="mailto:hello@dgallardo.com" class="link">email</a> or connect through any of the social media
             accounts I have.
           </p>
         </div>
@@ -196,8 +197,6 @@
     }
     scrollToTopBtn.addEventListener("click", scrollToTop);
   </script>
-
-
 
 </body>
 
