--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
   <meta property="og:title" content="David Gallardo | Product Designer">
   <meta property="og:description" content="Hey, I'm David Gallardo, a Product designer based in sunny Barcelona. Welcome to my personal website!" />
   <meta property="og:url" content="https://dgallardo.com">
-  <meta property="og:image" content="img/davidgallardo-og.png">
+  <meta property="og:image" content="https://dgallardo.com/img/davidgallardo-og.png">
 
   <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="preload" href="css/main.css" as="style">
+  <link rel="stylesheet" href="css/main.css" media="print" onload="this.media='all'">
 
   <meta name="theme-color" content="#fafafa">
 </head>
