some performance tweaks such as lazy loading certain images

--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 
-  <link rel="preload" href="css/main.css" as="style">
-  <link rel="stylesheet" href="css/main.css" media="print" onload="this.media='all'">
+  <link rel="stylesheet" href="css/main.css">
+  <!-- <link rel="preload" href="css/main.css" as="style">
+  <link rel="stylesheet" href="css/main.css" media="print" onload="this.media='all'"> -->
+
 
   <meta name="theme-color" content="#fafafa">
 </head>
@@ -37,14 +39,14 @@
     </div>
     <div class="container">
       <div class="row">
-        <div class="logo"><img src="img/logo-flat.webp" alt="lighting logo" data-aos="fade-down"></div>
+        <div class="logo"><img src="img/logo-flat.webp" width="64px" alt="lighting logo"></div>
       </div>
       <div class="row">
         <div class="col-12 offset-md-1 col-md-8 offset-md-2 col-lg-6 offset-lg-3 hero-wrap">
           <div class="title-wrap" data-aos="fade-up" data-aos-delay="200">
             <h1 class="title">david gallardo</br> designerd</h1>
           </div>
-          <img src="img/hero-img.webp" alt="David Gallardo in a forest" data-aos="fade-up" data-aos-delay="500">
+          <img src="img/hero-img.webp" width="600px" alt="David Gallardo in a forest" data-aos="fade-up" data-aos-delay="500">
         </div>
       </div>
     </div>
@@ -86,11 +88,11 @@
               I’m also helping the <span class="zazu-link">zazu.me</span> team build the next generation of property management software.
             </p>
           </div>
-          <img src="img/zazume.webp" alt="zazu.me screenshot">
+          <img src="img/zazume.webp" alt="zazu.me screenshot" loading="lazy">
 
         </div>
         <div class="col-12 order-1 order-md-2 offset-0 col-md-6 offset-xl-2 col-lg-6 col-xl-5 tk-wrap" data-aos="fade-up">
-          <img src="img/travelperk.webp" alt="TravelPerk screenshot">
+          <img src="img/travelperk.webp" alt="TravelPerk screenshot" loading="lazy">
         </div>
       </div>
     </div>
@@ -124,12 +126,12 @@
     </div>
     <div class="photo-wrap">
       <div class="photo-list">
-        <div class="photo" data-aos="fade-up"><img src="img/photos/1-street.webp" alt="Man in a tunnel - photo by David Gallardo"></div>
-        <div class="photo" data-aos="fade-up" data-aos-delay="200"><img src="img/photos/2-street.webp" alt="woman walking in an alley - photo by David Gallardo"></div>
-        <div class="photo" data-aos="fade-up" data-aos-delay="400"><img src="img/photos/3-street.webp" alt="woman with a mask going down the stairs - photo by David Gallardo"></div>
-        <div class="photo" data-aos="fade-up" data-aos-delay="600"><img src="img/photos/4-street.webp" alt="two man laughing in a bar terrace - photo by David Gallardo"></div>
-        <div class="photo" data-aos="fade-up" data-aos-delay="800"><img src="img/photos/5-street.webp" alt="man at the end of the street - photo by David Gallardo"></div>
-        <div class="photo" data-aos="fade-up" data-aos-delay="1000"><img src="img/photos/6-street.webp" alt="man walking in Raval - photo by David Gallardo"></div>
+        <div class="photo" data-aos="fade-up"><img src="img/photos/1-street.webp" alt="Man in a tunnel - photo by David Gallardo" loading="lazy"></div>
+        <div class="photo" data-aos="fade-up" data-aos-delay="200"><img src="img/photos/2-street.webp" alt="woman walking in an alley - photo by David Gallardo" loading="lazy"></div>
+        <div class="photo" data-aos="fade-up" data-aos-delay="400"><img src="img/photos/3-street.webp" alt="woman with a mask going down the stairs - photo by David Gallardo" loading="lazy"></div>
+        <div class="photo" data-aos="fade-up" data-aos-delay="600"><img src="img/photos/4-street.webp" alt="two man laughing in a bar terrace - photo by David Gallardo" loading="lazy"></div>
+        <div class="photo" data-aos="fade-up" data-aos-delay="800"><img src="img/photos/5-street.webp" alt="man at the end of the street - photo by David Gallardo" loading="lazy"></div>
+        <div class="photo" data-aos="fade-up" data-aos-delay="1000"><img src="img/photos/6-street.webp" alt="man walking in Raval - photo by David Gallardo" loading="lazy"></div>
       </div>
     </div>
   </section>
@@ -172,7 +174,7 @@
             <li class="sm-link link" data-aos="fade-up" data-aos-delay="600"><a href="https://twitter.com/davrocks" target="_blank" rel="noopener noreferrer">Twitter</a></li>
           </ul>
           <div class="top-arrow-wrap">
-            <a class="link" id="scrollTop"><img src="img/top-arrow.svg" alt="top arrow"></a>
+            <a class="link" id="scrollTop"><img src="img/top-arrow.svg" alt="top arrow" loading="lazy"></a>
           </div>
         </div>
       </div>
