add GA, fix some responsive issues on medium screens

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset="utf-8">
   <title>David Gallardo | Product Designer</title>
-  <meta name="description" content="Hey, I'm David Gallardo, a Product designer based in sunny Barcelona. Welcome to my personal website!">
+  <meta name="description" content="Hey, I'm David Gallardo, a Product Designer based in sunny Barcelona. Welcome to my personal website :)">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <meta property="og:title" content="David Gallardo | Product Designer">
-  <meta property="og:description" content="Hey, I'm David Gallardo, a Product designer based in sunny Barcelona. Welcome to my personal website!" />
+  <meta property="og:description" content="Hey, I'm David Gallardo, a Product Designer based in sunny Barcelona. Welcome to my personal website :)" />
   <meta property="og:url" content="https://dgallardo.com">
   <meta property="og:image" content="https://dgallardo.com/img/davidgallardo-og.png">
 
@@ -17,15 +17,19 @@
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 
   <link rel="stylesheet" href="css/main.css">
-  <!-- <link rel="preload" href="css/main.css" as="style">
-  <link rel="stylesheet" href="css/main.css" media="print" onload="this.media='all'"> -->
 
+  <meta name="theme-color" content="#0B0B0C">
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-R2EJ2M990C"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
-  <meta name="theme-color" content="#fafafa">
+    gtag('config', 'G-R2EJ2M990C');
+  </script>
 </head>
 
 <body>
-  <!-- The cursor elements -->
   <div class="cursor cursor--small"></div>
   <canvas class="cursor cursor--canvas" resize></canvas>
 
@@ -71,7 +75,6 @@
     </div>
   </section>
 
-
   <section class="projects">
     <div class="inner-grid">
       <div class="container">
@@ -97,6 +100,7 @@
       </div>
     </div>
   </section>
+
   <section class="hobbies">
     <div class="inner-grid">
       <div class="container">
@@ -116,6 +120,7 @@
       </div>
     </div>
   </section>
+
   <section class="photography">
     <div class="inner-grid">
       <div class="container">
@@ -148,7 +153,7 @@
       <div class="row">
         <div class="col-12 col-md-10 offset-md-1 col-lg-10 offset-lg-0 col-xl-8 prez-block">
           <h2 data-aos="fade-up">Let’s keep in touch</h2>
-          <p data-aos="fade-up">If you made it that far and still feel like you want to know more about me or maybe start a project together, please feel free to drop me an <a href="mailto:hello@dgallardo.com" class="link">email</a> or connect through any of the social media
+          <p data-aos="fade-up">If you made it this far and still feel like you want to know more about me or maybe start a project together, please feel free to drop me an <a href="mailto:hello@dgallardo.com" class="link">email</a> or connect through any of the social media
             accounts I have.
           </p>
         </div>
@@ -179,8 +184,6 @@
         </div>
       </div>
     </div>
-
-
   </footer>
 
 
@@ -200,7 +203,6 @@
     }
     scrollToTopBtn.addEventListener("click", scrollToTop);
   </script>
-
 </body>
 
 </html>
